2012-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (OpenBlob): Restore file position, rather than
	rewind, after reading header bytes.

	* magick/image.c (SetImageInfo): Restore file position after
	reading header bytes.  Resolves SourceForge issue 3597486
	"ReadImage not working with file descriptors".

2012-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick: WIN64 (64-bit Windows) installer improvements to
	bring up to par with 32-bit installer.

2012-12-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick: WIN64 (64-bit Windows) is supported now.

2012-12-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c: Eliminate support for experimental
	MAGICK_MMAP_WRITE, which never quite worked correctly and did not
	provide performance benefits.

2012-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (FileToBlob): Rewrite to be based on stdio.

2012-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick_types.h.in: Changes to try to work better with the
	Windows WIN64 API.

2012-12-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageColorRegion): The provided color should
	be in the same colorspace as the image.  The image is no longer
	converted to RGB with the expectation that the provided color is
	always some particular RGB.
	(AppendImages): No longer transform the canvas image to RGB.  Now
	append uses the first listed image to determine the colorspace
	which should be used when appending the additional images and of
	the output image.  The additional images are converted to the
	canvas image colorspace.  Likewise, the background color is
	assumed to be in the same colorspace as the first listed image so
	that it is compatible and can be used to fill the background color
	without translation.

2012-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* rungm.sh.in: Remove extraneous space in first line which