@@ -39,6 +39,7 @@
 <p>2012-12-24  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>www/api/api.rst: Add another example Core C API example program.</li>
 <li>magick/blob.c (OpenBlob): Restore file position, rather than
 rewind, after reading header bytes.</li>
 <li>magick/image.c (SetImageInfo): Restore file position after
