@@ -101,14 +101,85 @@ and normalize</li>
 or shave image</li>
 </ul>
 </blockquote>
-<p>Here is a sample program to get you started. To find out about all the
-functions that are available, read the source code. Each function is delineated
-with a full rows of percent signs with comments describing the parameters
-required for the function and what it does. For ease in finding a function,
-they are sorted in alphabetical order.</p>
-<p>Here is a full example of a program, demo.c, which reads multiple input files
-(possibly animation files) specified on the command line, resizes the image
-frames to 106x80, and writes the resulting animation to disk:</p>
+<p>Here are a few sample programs to get you started.</p>
+<p>This example program (convert.c) simply converts from one file name to
+another (and will automatically change formats based on file
+extension):</p>
+<pre class="literal-block">
+#include &lt;stdio.h&gt;
+#include &lt;stdlib.h&gt;
+#include &lt;string.h&gt;
+#include &lt;time.h&gt;
+#include &lt;sys/types.h&gt;
+#include &lt;magick/api.h&gt;
+
+int main ( int argc, char **argv )
+{
+  Image
+    *image = (Image *) NULL;
+
+  char
+    infile[MaxTextExtent],
+    outfile[MaxTextExtent];
+
+  int
+    arg = 1,
+    exit_status = 0;
+
+  ImageInfo
+    *imageInfo;
+
+  ExceptionInfo
+    exception;
+
+  InitializeMagick(NULL);
+  imageInfo=CloneImageInfo(0);
+  GetExceptionInfo(&amp;exception);
+
+  if (argc != 3)
+    {
+      (void) fprintf ( stderr, &quot;Usage: %s infile outfile\n&quot;, argv[0] );
+      (void) fflush(stderr);
+      exit_status = 1;
+      goto program_exit;
+    }
+
+  (void) strncpy(infile, argv[arg], MaxTextExtent-1 );
+  arg++;
+  (void) strncpy(outfile, argv[arg], MaxTextExtent-1 );
+
+  (void) strcpy(imageInfo-&gt;filename, infile);
+  image = ReadImage(imageInfo, &amp;exception);
+  if (image == (Image *) NULL)
+    {
+      CatchException(&amp;exception);
+      exit_status = 1;
+      goto program_exit;
+    }
+
+  (void) strcpy(image-&gt;filename, outfile);
+  if (!WriteImage (imageInfo,image))
+    {
+      CatchException(&amp;image-&gt;exception);
+      exit_status = 1;
+      goto program_exit;
+    }
+
+ program_exit:
+
+  if (image != (Image *) NULL)
+    DestroyImage(image);
+
+  if (imageInfo != (ImageInfo *) NULL)
+    DestroyImageInfo(imageInfo);
+  DestroyMagick();
+
+  return exit_status;
+}
+</pre>
+<p>This example program (demo.c) which reads multiple input files
+(possibly animation files) specified on the command line, resizes the
+image frames to 106x80, and writes the resulting animation to disk:</p>
 <pre class="literal-block">
 #include &lt;stdio.h&gt;
 #include &lt;string.h&gt;
@@ -179,6 +250,7 @@ int main(int argc,char **argv)
   if (thumbnails)
     {
       (void) strcpy(thumbnails-&gt;filename,argv[argc-1]);
+      image_info-&gt;adjoin=MagickTrue;
       printf(&quot;Writing %s ... %lu frames\n&quot;, thumbnails-&gt;filename,
              GetImageListLength(thumbnails));
       WriteImage(image_info,thumbnails);
@@ -194,7 +266,7 @@ int main(int argc,char **argv)
   return(0);
 }
 </pre>
-<p>Now we need to compile. On Unix, the command would look something like this:</p>
+<p>To compile on Unix, the command would look something like this:</p>
 <pre class="literal-block">
 gcc -o demo demo.c -O `GraphicsMagick-config --cppflags --ldflags --libs`
 </pre>
@@ -208,8 +280,6 @@ out.miff'.</p>
 <p>The GraphicsMagick-config script reproduces the options which were used to
 compile the GraphicsMagick utilities. Using compatible options ensures that
 your program will compile and run.</p>
-<p>Another example is smile.c. Compile and execute it to display a smiley face on
-your X server.</p>
 <hr class="docutils" />
 <p>Copyright © GraphicsMagick Group 2002 - 2012</p>
 </div>
